@@ -1,3 +1,10 @@
+2007-06-14  Murray Cumming  <murrayc@murrayc.com>
+
+	* cairomm/refptr.h: Added RefPtr(object, refcount) constructor
+	for use in cast_*(), so that the casted RefPtr shares the same 
+	refcount, avoiding an early deletion. I do not like making 
+	this constructor public, but I do not see another way.
+
 === 1.4.0 ===
 
 2007-07-12  Jonathon Jongsma  <jjongsma@gnome.org>
